Fix bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -623,9 +623,15 @@ p.contact-item {
     .gallery {
         min-width: unset;
         max-width: 100%;
+        width: 100%;
         -ms-grid-columns: 1fr 1fr;
         grid-template-columns: repeat(2, 1fr);
         padding: 0 1.5rem;
+    }
+
+    .gallery:has(.button) {
+        -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
     }
 
     .menu,
@@ -829,7 +835,7 @@ p.contact-item {
         -ms-flex-direction: column;
         flex-direction: column;
         gap: 2rem;
-        padding: 2, 5rem 1rem;
+        padding: 4rem 1rem;
 
     }
 
@@ -838,9 +844,14 @@ p.contact-item {
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
         flex-direction: column;
-        gap: 1rem;
+        gap: 0.2rem;
         padding-left: 1rem;
         padding-right: 1rem;
+    }
+
+    .colophon-block {
+        flex-direction: column;
+        gap: 0.2rem;
     }
 
     p.contact-item {
